package padraodecorator;

public interface Pedido {
    public Double getPreco();
    public String getLabel();
}